--- a/src/map/map.css
+++ b/src/map/map.css
@@ -1,12 +1,12 @@
-.map {
+#map {
   position: absolute;
   left: 0;
   right: 0;
   bottom: 0;
   top: 0;
-  height: 100px
-  width: 90%;
+  height: 150%;
   float: left;
   z-index: -1;
 }
+
 
