--- a/src/map/map.css
+++ b/src/map/map.css
@@ -1,12 +1,29 @@
-#map {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  height: 150%;
-  float: left;
-  z-index: -1;
+@media screen and (max-width: 700px) {
+  #map {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    height: 50%;
+    float: left;
+    z-index: -1;
+  }
 }
+
+@media screen and (min-width: 701px) {
+  #map {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    height: 50%;
+    float: left;
+    z-index: -1;
+  }
+}
+
+
 
 
