--- a/src/table/table.css
+++ b/src/table/table.css
@@ -1,8 +1,8 @@
-.table {
-  position: relative;
-  height: 100%;
-  float: right;
-  width: 10%;
+#zonestable {
+  position: absolute;
+  top: 55%;
+  height: 40%;
+  width: 100%;
   z-index: 0;
 }
 
